<resources>
    <string name="app_name">Tanamify</string>
    <string name="title_home">Beranda</string>
    <string name="title_scan">Analisis</string>
    <string name="title_profile">Profil</string>
    <string name="team_id">C241-PS039</string>
    <string name="created_by">dibuat oleh</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="login_greeting">Masuk pakai akun kamu ya!</string>
    <string name="name">Nama</string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="login">Masuk</string>
    <string name="or_register">Belum memiliki akun?</string>
    <string name="register">Daftar</string>
    <string name="history">Riwayat</string>
    <string name="label">Label</string>
    <string name="replace_image">Ganti gambar</string>
    <string name="our_team">M200D4KY1957 – Rizky Akhmad Fahreza \nM248D4KX2597 – Dina Merlia Efendi \nM308D4KX1815 – Nasywa Anindya Putri \nC200D4KY0347 – Derva Anargya Ghaly \nC200D4KY0885 – Erlan Irhab Ghalib \nA119D4KY4094 – Yondika Vio Landa \nA338D4KY4234 – Muhammad Iqbal Fadhillah</string>
    <string name="register_greeting">Yuk Daftar Akun Dulu</string>
    <string name="email">Email</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="or_login">Sudah Mempunyai Akun</string>
    <string name="tanamify">Tanamify</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="fulan">Fulan!</string>
    <string name="hai">Hai,</string>
    <string name="default_user_name" />
    <string name="Penanam">Penanam</string>
    <string name="toggle_password_visibility" />
    <string name="delete">Hapus</string>
</resources>